--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
             <h2>CONTACTO</h2>
             <p>Hablemos de tu próximo proyecto.</p>
             <div class="contact-info">
-                <p>📧 Email de Producción: dibellarecords@gmail.com</p>
-                <p>📞 Teléfono: 221 525 1835</p>
+                <p>📧 Email de Producción: Info@dibellarecords.com</p>
+                <p>📞 Teléfono: 221 202 8601</p>
                 <p>📍 Estudio Principal: La Plata, Buenos Aires</p>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/axel_x145/" target="_blank">Instagram</a> | 
-                    <a href="https://wa.me/5492215251835" target="_blank">WhatsApp</a> | 
-                    <a href="#" target="_blank">YouTube</a>
+                    <a href="https://www.instagram.com/dibellarecords/" target="_blank">Instagram</a> | 
+                    <a href="https://wa.me/5492212028601" target="_blank">WhatsApp</a> | 
+                    <a href="mailto:Info@dibellarecords.com" target="_blank">Email</a>
                 </div>
             </div>
             </section>
